k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: tainan-garbage
spec:
  selector:
    matchLabels:
      app: tainan-garbage
  replicas: 1
  template:
    metadata:
      labels:
        app: tainan-garbage
    spec:
      containers:
      - name: tainan-garbage
        image: funtuan/tainan-garbage
        ports: 
        - containerPort: 80
