k8s/service.yml

apiVersion: v1
kind: Service
metadata:
  name: tainan-garbage
spec:
  type: ClusterIP
  selector:
    app: tainan-garbage
  ports:
    - port: 80
      targetPort: 80
