k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tainan-garbage-ingress
  labels:
    app: tainan-garbage
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - garbage.funtuan.dev
      secretName: garbage-tls
  rules:
    - host: garbage.funtuan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tainan-garbage
                port:
                  number: 80
